feat(storage): add get url services
